Table in review is working

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                     <img src="resources/img/pizza-1.png" class="pizza">
                                     <p>Large</p>
                                 </div>
-                                <input type="radio" value="Large" class="size1" name="size">
+                                <input type="radio" value="1" class="size1" name="size">
                             </label>
                         </div>
                         <div class="small-12 large-4 columns">
@@ -65,7 +65,7 @@
                                     <img src="resources/img/pizza-2.png" class="pizza" style="padding-top: 20px">
                                     <p>Medium</p>
                                 </div>
-                                <input type="radio" value="Medium" class="size1" name="size">
+                                <input type="radio" value="2" class="size1" name="size">
                             </label>
                         </div>
                         <div class="small-12 large-4 columns">
@@ -74,7 +74,7 @@
                                     <img src="resources/img/pizza-3.png" class="pizza" style="padding-top: 30px">
                                     <p>Small</p>
                                 </div>
-                                <input type="radio" value="Small" class="size1" name="size">
+                                <input type="radio" value="3" class="size1" name="size">
                             </label>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                                     <img src="resources/img/sauce-1.png" class="pizza">
                                     <p>Marinara</p>
                                 </div>
-                                <input type="radio" value="Marinara" name="sauce">
+                                <input type="radio" value="1" class="sauce1" name="sauce">
                             </label>
                         </div>
                         <div class="small-12 large-3 columns">
@@ -107,7 +107,7 @@
                                     <img src="resources/img/sauce-2.png" class="pizza">
                                     <p>Barbecue</p>
                                 </div>
-                                <input type="radio" value="Barbecue" name="sauce">
+                                <input type="radio" value="2" class="sauce1" name="sauce">
                             </label>
                         </div>
                         <div class="small-12 large-3 columns">
@@ -116,16 +116,16 @@
                                     <img src="resources/img/sauce-3.png" class="pizza">
                                     <p>Parmesan</p>
                                 </div>
-                                <input type="radio" value="Parmesan" name="sauce">
+                                <input type="radio" value="3" class="sauce1" name="sauce">
                             </label>
                         </div>
                         <div class="small-12 large-3 columns">
                             <label class="sauce">
                                 <div class="pizza">
-                                    <img src="resources/img/sauce-4.png" class="pizza">
+                                    <img src="resources/img/sauce-4.png" class="sauce1" class="pizza">
                                     <p>Buffalo</p>
                                 </div>
-                                <input type="radio" value="Buffalo" name="sauce">
+                                <input type="radio" value="4" class="sauce1" name="sauce">
                             </label>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                                     <img src="resources/img/cheese.png" class="pizza">
                                     <p>Yes, please</p>
                                 </div>
-                                <input type="radio" value="yes" name="cheese">
+                                <input type="radio" value="1" class="cheese1" name="cheese">
                             </label>
                         </div>
                         <div class="small-12 large-9 columns">
@@ -158,7 +158,7 @@
                                 <div class="pizza" style="text-align: left">
                                     <p class="no-cheese">No, thanks</p>
                                 </div>
-                                <input type="radio" value="no" name="cheese">
+                                <input type="radio" value="2" class="cheese1" name="cheese">
                             </label>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                                     <img src="resources/img/topping-1.png" class="pizza" style="padding-top: 20px">
                                     <p>Peperoni</p>
                                 </div>
-                                <input type="checkbox" value="Peperoni" name="toppings" id="n1" class="topping">
+                                <input type="checkbox" value="1" name="toppings" id="n1" class="topping">
                             </label>
                         </div>
                         <div class="small-12 large-3 columns">
@@ -191,7 +191,7 @@
                                     <img src="resources/img/topping-2.png" class="pizza">
                                     <p>Bacon</p>
                                 </div>
-                                <input type="checkbox" value="Bacon" name="toppings" id="n2" class="topping">
+                                <input type="checkbox" value="2" name="toppings" id="n2" class="topping">
                             </label>
                         </div>
                         <div class="small-12 large-3 columns">
@@ -200,7 +200,7 @@
                                     <img src="resources/img/topping-3.png" class="pizza" style="padding-top: 20px">
                                     <p>Ham</p>
                                 </div>
-                                <input type="checkbox" value="Ham" name="toppings" id="n3" class="topping">
+                                <input type="checkbox" value="3" name="toppings" id="n3" class="topping">
                             </label>
                         </div>
                         <div class="small-12 large-3 columns">
@@ -209,7 +209,7 @@
                                     <img src="resources/img/topping-4.png" class="pizza" style="padding-top: 5px">
                                     <p>Canandian Ham</p>
                                 </div>
-                                <input type="checkbox" value="Canadian Ham" name="toppings" id="n4" class="topping">
+                                <input type="checkbox" value="4" name="toppings" id="n4" class="topping">
                             </label>
                         </div>
                     </div>
@@ -234,7 +234,7 @@
                                     <img src="resources/img/veggie-1.png" class="pizza">
                                     <p>Bell pepper</p>
                                 </div>
-                                <input type="checkbox" value="Bell Pepper" name="toppings" id="v1" class="veggie">
+                                <input type="checkbox" value="1" name="toppings" id="v1" class="veggie">
                             </label>
                         </div>
                         <div class="small-12 large-9 columns">
@@ -243,7 +243,7 @@
                                     <img src="resources/img/veggie-2.png" style="padding-top: 13px">
                                     <p style="text-align: left">Olives</p>
                                 </div>
-                                <input type="checkbox" value="Black Olives" name="toppings" id="v2" class="veggie">
+                                <input type="checkbox" value="2" name="toppings" id="v2" class="veggie">
                             </label>
                         </div>
                     </div>
@@ -269,17 +269,26 @@
                                 <table class="order-review">
                                     <thead>
                                     <tr>
+                                        <th></th>
                                         <th>Item</th>
                                         <th>Price</th>
                                     </tr>
                                     </thead>
                                     <tbody class="itemsToAdd">
                                     <tr class="crust">
-
                                     </tr>
+                                    <tr class="sauce2">
+                                    </tr>
+                                    <tr class="cheese2">
+                                    </tr>
+                                    <tbody class="topping2">
+                                    </tbody>
+                                    <tbody class="veggie2">
+                                    </tbody>
                                     <tr>
-                                        <td><b>Total</b></td>
-                                        <td>$15.00</td>
+                                        <td></td>
+                                        <td><b>Total: </b></td>
+                                        <td class="order-total"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -327,57 +336,118 @@
             $(".size").fadeTo("400", 0.4);
             $(this).fadeTo( "fast", 1.0 );
 
-            var size = $('.size1').val();
-            var price;
+            var size = $('.size1:checked').val();
+            var row;
 
-            if (size == "Large")
-                price = "$ 5.00";
-            if (size == "Medium")
-                price = "$ 4.00";
-            if (size == "Small")
-                price = "$ 3.00";
-
-            var row = "<td>"+size+"</td><td>" + price + "</td>";
-
+            if (size == 1)
+                row = "<td><b>Size: </b></td><td>Large</td><td class='pricere'>$ 5.00</td>";
+            if (size == 2)
+                row = "<td><b>Size: </b></td><td>Medium</td><td class='price'>$ 4.00</td>";
+            if (size == 3)
+                row = "<td><b>Size: </b></td><td>Small</td><td class='price'>$ 3.00</td>";
             $('.crust').html(row);
 
         });
         $(".sauce").click(function() {
             $(".sauce").fadeTo("400", 0.4);
             $(this).fadeTo( "fast", 1.0 );
+
+            var souce = $('.sauce1:checked').val();
+            var row;
+
+            if (souce == 1)
+                row = "<td><b>Sauce: </b></td><td>Marinara</td><td class='price'>$ 1.00</td>";
+            if (souce == 2)
+                row = "<td><b>Sauce: </b></td><td>Barbecue</td><td class='price'>$ 1.00</td>";
+            if (souce == 3)
+                row = "<td><b>Sauce: </b></td><td>Parmesan</td><td class='price'>$ 1.00</td>";
+            if (souce == 4)
+                row = "<td><b>Sauce: </b></td><td>Buffalo</td><td class='price'>$ 1.00</td>";
+            $('.sauce2').html(row);
+
         });
         $(".cheese").click(function() {
             $(".cheese").fadeTo("400", 0.4);
             $(this).fadeTo( "fast", 1.0 );
+
+            var cheese = $('.cheese1:checked').val();
+            var row;
+
+            if (cheese == 1)
+                row = "<td><b>Cheese: </b></td><td>Yes</td><td class='price'>$ 1.00</td>";
+            if (cheese == 2)
+                row = "<td><b>Cheese: </b><td>No</td><td class='price'>$ 0.00</td>";
+            $('.cheese2').html(row);
+
         });
         $(".toppings").click(function() {
-            if($("#n1").is(':checked'))
+            var row;
+
+            if($("#n1").is(':checked')){
                 $("#img_n1").fadeTo('fast', 1);
-            else
+                if ($('.topping2').find(".t1").length < 1)
+                    row = "<tr class='t1'><td><b>Topping: </b></td><td>Pepperoni</td><td class='price'>$ 1.00</td></tr>";
+            }
+            else{
                 $("#img_n1").fadeTo(400, 0.4);
-            if($("#n2").is(':checked'))
+                $(".topping2").find("tr.t1").remove();
+            }
+            if($("#n2").is(':checked')){
                 $("#img_n2").fadeTo('fast', 1);
-            else
+                if ($('.topping2').find(".t2").length < 1)
+                    row = "<tr class='t2'><td><b>Topping: </b></td><td>Bacon</td><td class='price'>$ 1.00</td></tr>";
+            }
+            else{
                 $("#img_n2").fadeTo(400, 0.4);
-            if($("#n3").is(':checked'))
+                $(".topping2").find("tr.t2").remove();
+            }
+            if($("#n3").is(':checked')){
                 $("#img_n3").fadeTo('fast', 1);
-            else
+                if ($('.topping2').find(".t3").length < 1)
+                    row = "<tr class='t3'><td><b>Topping: </b></td><td>Ham</td><td class='price'>$ 1.00</td></tr>";
+            }
+            else{
                 $("#img_n3").fadeTo(400, 0.4);
-            if($("#n4").is(':checked'))
+                $(".topping2").find("tr.t3").remove();
+            }
+            if($("#n4").is(':checked')){
                 $("#img_n4").fadeTo('fast', 1);
-            else
+                if ($('.topping2').find(".t4").length < 1)
+                    row = "<tr class='t4'><td><b>Topping: </b></td><td>Canadina Bacon</td><td class='price'>$ 1.00</td></tr>";
+            }
+            else{
                 $("#img_n4").fadeTo(400, 0.4);
+                $(".topping2").find("tr.t4").remove();
+            }
+            $('.topping2').append(row);
+
+
         });
         $(".veggies").click(function() {
-            if ($("#v1").is(':checked'))
+            var row;
+
+            if ($("#v1").is(':checked')){
                 $("#img_v1").fadeTo('fast', 1);
-            else
+                if ($('.veggie2').find(".v1").length < 1)
+                    row = "<tr class='v1'><td><b>Topping: </b></td><td>Bell Pepper</td><td class='price'>$ 0.50</td></tr>";
+            }
+            else{
                 $("#img_v1").fadeTo(400, 0.4);
-            if ($("#v2").is(':checked'))
+                $(".veggie2").find(".v1").remove();
+            }
+            if ($("#v2").is(':checked')){
                 $("#img_v2").fadeTo('fast', 1);
-            else
+                if ($('.veggie2').find(".v2").length < 1)
+                    row = "<tr class='v2'><td><b>Topping: </b></td><td>Black Olives</td><td class='price'>$ 0.50</td></tr>";
+            }
+            else{
                 $("#img_v2").fadeTo(400, 0.4);
+                $(".veggie2").find(".v2").remove();
+            }
+            $('.veggie2').append(row);
         });
+
+
 
     });
 
